feat: add styles

--- a/index.html
+++ b/index.html
@@ -3,26 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Oleksii-Kukharuk CV rs school</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
-  <body>
+  <body class="container">
     <header>
-      <!-- <nav>
+      <nav>
         <ul>
-          <li>PROFILE INFO</li>
-          <li>CONTACTS</li>
-          <li>HARD SKILLS</li>
-          <li>SOFT SKILLS</li>
-          <li>PROJECT EXPIRIENCE</li>
-          <li>WORK EXERIENCE</li>
-          <li>EDUCATION</li>
-          <li>LANGUAGES</li>
+          <li class="nav_link"><a href="#profile">PROFILE INFO</a></li>
+          <li class="nav_link"><a href="#contacts">CONTACTS</a></li>
+          <li class="nav_link"><a href="#hard">HARD SKILLS</a></li>
+          <li class="nav_link"><a href="#soft">SOFT SKILLS</a></li>
+          <li class="nav_link"><a href="#projects">PROJECT EXPIRIENCE</a></li>
+          <li class="nav_link"><a href="#work">WORK EXERIENCE</a></li>
+          <li class="nav_link"><a href="#education">EDUCATION</a></li>
+          <li class="nav_link"><a href="#languages">LANGUAGES</a></li>
         </ul>
-      </nav> -->
+      </nav>
     </header>
     <main>
       <section class="hero">
-        <h2>PROFILE INFO</h2>
+        <h1>Oleksii Kukharuk</h1>
+        <p>Full-stack Developer</p>
+        <h2 id="profile">PROFILE INFO</h2>
         <p>
           I'm looking for a Front-end Developer position within successful
           company. I would like to obtain valuable experience, apply my
@@ -31,7 +34,7 @@
           and eager to grow professionally.
         </p>
       </section>
-      <section class="contacts">
+      <section id="contacts" class="contacts">
         <h2>CONTACTS</h2>
         <ul>
           <li>
@@ -63,7 +66,7 @@
           <li>- Ready to relocate - Temporary in Poland</li>
         </ul>
       </section>
-      <section class="hard_skills">
+      <section id="hard" class="hard_skills">
         <h2>Hard Skills</h2>
         <ul>
           <li>HTML5/CSS3/SASS</li>
@@ -78,7 +81,7 @@
           <li>- TypeScript - in proces</li>
         </ul>
       </section>
-      <section class="soft_skills">
+      <section id="soft" class="soft_skills">
         <h2>Soft Skills</h2>
         <ul>
           <li>
@@ -99,7 +102,7 @@
           </li>
         </ul>
       </section>
-      <section class="projects">
+      <section id="projects" class="projects">
         <h2>Projects</h2>
         <ul>
           <li>
@@ -147,7 +150,7 @@
           <li>
             <h3>
               <a class="link" href="https://am1007.github.io/filmoteka_PG-13/"
-                >[Filmoteka]
+                >Filmoteka
               </a>
               <a class="link" href="https://github.com/AM1007/filmoteka_PG-13">
                 [Github link]
@@ -180,7 +183,7 @@
               <a
                 class="link"
                 href="https://oleksii-kukharuk.github.io/ninjas-project/"
-                >[Ice Cream]
+                >Ice Cream
               </a>
               <a
                 class="link"
@@ -209,7 +212,7 @@
           </li>
         </ul>
       </section>
-      <section class="work">
+      <section id="work" class="work">
         <h2>WORK EXPERIENCE</h2>
 
         <h3>
@@ -244,7 +247,7 @@
           <li>Mentoring</li>
         </ul>
       </section>
-      <section class="education">
+      <section id="education" class="education">
         <h2>EDUCATION</h2>
 
         <ul>
@@ -266,7 +269,7 @@
           </li>
         </ul>
       </section>
-      <section class="languages">
+      <section id="languages" class="languages">
         <h2>LANGUAGES</h2>
         <ul>
           <li>Ukrainian - Native</li>
